syntax = "proto3";
package wiradata.users;

option go_package = "pb;users";

message Empty {}

message Id { string id = 1; } 
message String { string string = 1; } 

message Message { string message = 1; }

message Pagination {
  enum Sort {
    ASC = 0;
    DESC = 1;
  }
  uint32 page = 1;
  uint32 limit = 2;
  uint32 offset = 3;
  string search = 4;
  string order_by = 5;
  Sort sort = 6;
}

message PaginationResponse {
  Pagination pagination = 1;
  uint32 count = 2;
}

message Boolean { bool boolean = 1; }